# 21_school_ft_printf

./: .gitmodules  CMakeLists.txt  Makefile
includes/: ft_printf.h
src/: ft_abs.c  ft_count_float.c  ft_error_exit.c  ft_printf.c
